baslıklara-sayi-verildi

--- a/homework.html
+++ b/homework.html
@@ -18,18 +18,24 @@
 
     <h2>İlgi Alanlarım;</h2>
     <ol>
-        <ul> <h4>Filmler</h4>
+        <div> <li>
+        <ul><strong> Filmler</strong>
             <li><a target="_blank" href="https://www.imdb.com/title/tt0482571/">Prestij</a></li>
             <li><a target="_blank" href="https://www.imdb.com/title/tt0120737/">Yüzüklerin Efendisi</a></li>
-        </ul>
-        <ul> <h4>Diziler</h4>
+        </ul></li>
+        </div>
+        <div> <li>
+        <ul><strong> Diziler</strong>
             <li><a target="_blank" href="https://www.imdb.com/title/tt13675832/">Gibi</a></li>
             <li><a target="_blank" href="https://www.imdb.com/title/tt1831164/">L&M</a></li>
-        </ul>
-        <ul> <h4>Kitaplar</h4>
+        </ul></li>
+        </div>
+        <div> <li>
+        <ul><strong> Kitaplar</strong>
             <li><a target="_blank" href="https://www.google.com/search?q=zengin+baba+fakir+baba+googreads&sxsrf=ALiCzsZ8Z40lGvBBfxY64C6vlApcz-0_BQ%3A1667330848135&ei=IHNhY5zpB9WExc8PrMi34AU&ved=0ahUKEwic-bO32437AhVVQvEDHSzkDVwQ4dUDCBA&uact=5&oq=zengin+baba+fakir+baba+googreads&gs_lp=Egxnd3Mtd2l6LXNlcnC4AQP4AQEyBxAhGKABGArCAgoQABhHGNYEGLADwgIEECMYJ8ICBRAAGIAEwgIFEC4YgATCAggQABiABBjLAcICBhAAGBYYHsICBRAhGKABwgIEECEYCpAGCEitGVDYB1jyF3ABeADIAQCQAQCYAboBoAHIDKoBBDAuMTDiAwQgQRgA4gMEIEYYAIgGAQ&sclient=gws-wiz-serp">Zengin Baba Yoksul Baba</a></li>
             <li><a target="_blank" href="https://www.goodreads.com/book/show/43703334-amac-the-goal">Amaç</a></li>
-        </ul>
+        </ul></li>
+        </div>
     </ol>
     <hr>
     <h3> Sevdiğim Diziden Bir Görsel</h2>
